# insurance_claim

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  docker-compose.yml  main.py  model_analyzer.py  pyproject.toml  readme.md  task.txt  test.ipynb
app/: database.py  main.py
app/routes/: detect_vehicle.py  health_routes.py  rag_routes.py  vehicle_routes.py
app/services/: RAG_init.py  health_service.py  hf_query.py  medical_bill_detector.py  model_analyzer.py  prescription_detector.py  prompts.py  rc_detector.py  vehicle_anamoly_service.py
backend/: .env  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
backend/src/: db.ts  index.ts  middleware.ts
frontend/: components.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.jsx  App.tsx  Context.tsx  main.jsx  main.tsx
frontend/src/components/: BlurText.jsx  CTASection.jsx  CTASection.tsx  ClickSpark.jsx  FeatureSection.jsx  FeatureSection.tsx  Footer.jsx  Footer.tsx  HeroSection.jsx  HeroSection.tsx  HowItWorks.jsx  HowItWorks.tsx  Navbar.jsx  Navbar.tsx  ShinyText.jsx  ShinyText.tsx  SplitText.jsx  TextType.jsx  upload.jsx
frontend/src/components/ui/: theme-toggle.jsx  theme-toggle.tsx
frontend/src/context/: theme-context.jsx  theme-context.tsx
frontend/src/pages/: AuthPage.jsx  AuthPage.tsx  AuthorityPage.jsx  AuthorityPage.tsx  LandingPage.jsx  LandingPage.tsx  TestEndpointsPage.jsx
frontend/src/pages/Customer/: ClaimsPage.jsx  ClaimsPage.tsx  Navbar.jsx  (+21 more)
notebooks/: test.ipynb
routes/: detect_vehicle.py
