[project]
name = "insurance-claim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "markdown>=3.10",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "tensorflow>=2.20.0",
    "tflite>=2.18.0",
    "transformers>=4.57.3",
    "ultralytics>=8.3.228",
    "uvicorn>=0.38.0",
]
